[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-bot"
version = "0.1.0"
description = "Algorithmic trading bot for triangular arbitrage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybit==5.10.1",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "websocket-client==1.8.0",
    "plotly==5.24.0",
    "dash==2.17.1",
    "dash-bootstrap-components==1.6.0",
    "psutil==6.1.0",
    "aiohttp==3.10.5",
]

[tool.setuptools]
py-modules = [
    "main",
]

[tool.setuptools.packages.find]
include = ["arbitrage_bot*"]
